style(MapCard2): fix misaligned placeholder image

--- a/src/components/Pages/Maps/MapCard2/MapCard2.module.scss
+++ b/src/components/Pages/Maps/MapCard2/MapCard2.module.scss
@@ -53,6 +53,11 @@
   }
 }
 
+.mapCard .imgHolder [data-type=img-holder] {
+  height: inherit;
+  border-radius: 14px;
+}
+
 .leftSide {
   display: flex;
   flex-direction: column;
